# macos-config-check

./: Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lints.yml  outdated_dependencies.yml  release.yml  security_audit.yml  unused_dependencies.yml
src/: main.rs  utils.rs
src/checks/: mcc000.rs  mcc001.rs  mcc002.rs  mod.rs  model.rs
src/cmd/: bug_report.rs  control.rs  mod.rs
tests/: acceptance.rs
